--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ env_logger = "0.10.0"
 hex = "0.4.3"
 log = "0.4.17"
 openssl = "0.10.43"
+rand = "0.8.5"
 reqwest = { version = "0.11.13", features = ["json"] }
 serde = { version = "1.0.149", features = ["derive"] }
 serde_json = "1.0.89"
 tinytemplate = "1.2.1"
-tokio = { version = "1.22.0", features = ["fs", "macros", "rt"] }
+tokio = { version = "1.22.0", features = ["fs", "macros", "rt", "time"] }
 toml = "0.5.9"
